fix: make the pin icon look good on mobile

--- a/_sass/_post-list.scss
+++ b/_sass/_post-list.scss
@@ -20,9 +20,18 @@
     &:before {
       content: '📌';
       position: absolute;
-      left: -1em;
-      top: 1em;
       font-size: 0.9em;
+
+      /* Position pin on the right for mobile */
+      right: 3em;
+      top: 0.5em;
+
+      @media (min-width: $on-tablet) {
+        /* Position pin on the left for tablet and above */
+        left: -1em;
+        right: auto;
+        top: 1em;
+      }
     }
   }
 }
